css/style.css
/* ... */
.optiBgTrns .text-2
{
    background-color: var(--primary);
    padding:15px;
    line-height: 1;
}
.optiBgTrns .content
{
    background-color:#0005;
    padding:15px;
    color: #fff;
} 

/*stick contact icon */
.sticky-contact-bar {
    z-index: 9999;
    position: fixed;
    right: 0;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }
.sticky-contact-bar a {
    display: block;
    text-align: center;
    padding: 0px;
    transition: all 0.3s ease;
    color: white;
    font-size: var(--fs-20);
}
.sticky-contact-bar a:hover {
    /* background-color: #fff9; */
  }
.sticky-contact {
    /* background: #3B5998; */
    color: white;
    /* width: 30px;
    height: 30px; */
  }

  /* animation text */
  .ml11 {
    font-weight: 700;
    font-size: var(--fs-30);
  }
  
  .ml11 .text-wrapper {
    position: relative;
    display: inline-block;
    padding-top: 0.1em;
    padding-right: 0.05em;
    padding-bottom: 0.15em;
  }
  
  .ml11 .line {
    opacity: 0;
    position: absolute;
    left: 0;
    height: 100%;
    width: 3px;
    background-color: #fff;
    transform-origin: 0 50%;
  }
  
  .ml11 .line1 { 
    top: 0; 
    left: 0;
  }
  
  .ml11 .letter {
    display: inline-block;
    line-height: 1em;
  }


/*----------------- css 20-01-2020 -----------------*/
.btn-knowmore
{
    position: absolute;
    bottom: 20px;
    left: 0;
    right: 0;
    margin: auto;
    width: 50%;
    text-align: center;
}

.text-white
{
    color: #fff;
}


.achivemore-menu
{
    justify-content: flex-end;
}
.achivemore-menu .ul-sub-menu
{
    max-width: 100%;
    background: #ddd;
    padding-top: 5px;
    padding-bottom: 5px;
}

.achivemore-menu .ul-sub-menu .sub-Link
{
    display: flex;
    align-items: center;
    font-size: var(--fs-18);
}
.achivemore-menu .ul-sub-menu .sub-Link:hover
{
    color: var(--primary);
}
.achivemore-menu .ul-sub-menu img
{
    width: 40px;
    margin-right: 10px;
}
.achieveInfographic
{
    align-items: flex-start;
    justify-content: flex-end;
    position: relative;
}
.achieveInfographic .achieveWrapper
{
    width: 70%;
    position: relative;
}
.achieveInfographic .title-round
{
    background: var(--primary);
    color: #fff;
    border-radius: 50px;
    padding: 10px;
    max-width: 200px;
    text-align: center;
    font-weight: bold;
    display: flex;
    font-size: var(--fs-24);
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
    min-height: 70px;
    line-height: 1;
    font-family: 'Roboto Condensed', sans-serif;
    margin-bottom: 20px;
}
.achieveInfographic .title-round-grey
{
    background: #9e9e9e;
    font-size: var(--fs-14);
    color: #fff;
}
.achieveInfographic .title-text
{
    font-size: var(--fs-24);
    color: var(--primary);
    font-weight: bold;
    margin-bottom: 20px;
    line-height: 1;
}

.achieveInfographic .svg-total-line
{
    z-index: -1;
    position: absolute;
    left: 5%;
    top: 26%;
    width: 82%;
    height: 190px;
}
.achieveInfographic .svg-total-line line
{
    stroke: var(--dark-color);
    stroke-width: 5;
    animation: dash 2s infinite linear;
}
.achieveInfographic .ul-list-bullet li
{
    font-size: var(--fs-14);
}
.svg-lg,.svg-xl,.svg-md
{
    display: none;
}

.svg-total-line line:nth-child(odd)
{
    stroke-width: 15px;
    stroke: var(--primary);
}
@keyframes dash {
  to {
    stroke-dashoffset: 10;
  }
  from {
      stroke-dashoffset:200;
  }
}

.black_plateform {
    bottom: 7% !important;
}
.black_plateform i {
    color: var(--dark-color) !important;
}

.black_scroll i {
    color: var(--dark-color) !important;
}
.black_scroll {
    bottom: 5%;
}
a .tvarit-black:hover {
    color: var(--primary) !important;
}
.centerBtnKnowmore {
    text-align: center !important;
}
.p-content-justify {
    text-align: justify;
}
.formBoxWhitepaper {
    margin-top: 20px;
    padding: 20px;
    background-color: #ffffff12;
    margin-bottom: 20px;
}
.subscribeBg {
    background: url('../img/subscribeBg.jpg');
    background-size: cover;
    height: 100vh !important;
    margin-bottom: 0px !important;
}
.nav-link-seprator {
    padding: 20px 2px 20px 2px !important;
}
.nav-link-en {
    padding-right: 5px !important;
    padding-left: 5px !important;
}
.nav-link-de {
    padding-left: 5px !important;
    padding-right: 5px !important;
}
.main-menu .navbar-nav .nav-item a.nav-link.nav-link-seprator:before {
    height: 0px !important;
    }
    .main-menu .navbar-nav .nav-item .nav-link:hover, .fixed-menu.sticky .navbar-nav .nav-item a.nav-link.nav-link-seprator:hover {
        color: black !important;
    }

    #typed-prgf h1{font-size: 24px;}
    .subHeader{font-size:20px; text-align:center; font-weight:700; margin-bottom:30px; margin-top:12px;}

